[gd_scene load_steps=14 format=2]

[ext_resource path="res://addons/inventory_editor/ui_extensions/dropdown/Dropdown.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/inventory_editor/scenes/craft/InventoryCraftData.gd" type="Script" id=2]
[ext_resource path="res://addons/inventory_editor/scenes/craft/InventoryCraftDataPut.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/inventory_editor/scenes/craft/InventoryCraftDataPath.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/inventory_editor/icons/Add.png" type="Texture" id=5]
[ext_resource path="res://addons/inventory_editor/scenes/craft/InventoryCraftDataIngredient.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/inventory_editor/icons/Recipe.png" type="Texture" id=7]
[ext_resource path="res://addons/inventory_editor/icons/Item.png" type="Texture" id=8]
[ext_resource path="res://addons/inventory_editor/default/fonts/Pangolin-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://addons/inventory_editor/icons/File.png" type="Texture" id=10]
[ext_resource path="res://addons/inventory_editor/scenes/craft/InventoryCraftDataPutScene.tscn" type="PackedScene" id=11]
[ext_resource path="res://addons/inventory_editor/scenes/craft/InventoryCraftDataPathScene.tscn" type="PackedScene" id=12]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 9 )

[node name="InventoryCraftData" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.83167
margin_bottom = 2.83167
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginData" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 296.0

[node name="VBox" type="VBoxContainer" parent="MarginData"]
margin_right = 1024.0
margin_bottom = 296.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxTop" type="HBoxContainer" parent="MarginData/VBox"]
margin_right = 1024.0
margin_bottom = 216.0

[node name="VBox" type="VBoxContainer" parent="MarginData/VBox/HBoxTop"]
margin_right = 510.0
margin_bottom = 216.0
size_flags_horizontal = 3

[node name="HBoxStack" type="HBoxContainer" parent="MarginData/VBox/HBoxTop/VBox"]
margin_right = 510.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="MarginData/VBox/HBoxTop/VBox/HBoxStack"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "Stacksize"

[node name="Stacksize" type="LineEdit" parent="MarginData/VBox/HBoxTop/VBox/HBoxStack"]
margin_left = 104.0
margin_right = 510.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="HBoxIcon" type="HBoxContainer" parent="MarginData/VBox/HBoxTop/VBox"]
margin_top = 28.0
margin_right = 510.0
margin_bottom = 58.0

[node name="Label" type="Label" parent="MarginData/VBox/HBoxTop/VBox/HBoxIcon"]
margin_top = 8.0
margin_right = 76.0
margin_bottom = 22.0
rect_min_size = Vector2( 76, 0 )
text = "Icon"

[node name="Put" parent="MarginData/VBox/HBoxTop/VBox/HBoxIcon" instance=ExtResource( 3 )]
margin_left = 80.0
margin_right = 100.0
margin_bottom = 30.0

[node name="Icon" parent="MarginData/VBox/HBoxTop/VBox/HBoxIcon" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 104.0
margin_right = 510.0
margin_bottom = 30.0

[node name="HBoxScene" type="HBoxContainer" parent="MarginData/VBox/HBoxTop/VBox"]
margin_top = 62.0
margin_right = 510.0
margin_bottom = 92.0

[node name="Label" type="Label" parent="MarginData/VBox/HBoxTop/VBox/HBoxScene"]
margin_top = 8.0
margin_right = 76.0
margin_bottom = 22.0
rect_min_size = Vector2( 76, 0 )
text = "Scene"

[node name="PutScene" parent="MarginData/VBox/HBoxTop/VBox/HBoxScene" instance=ExtResource( 11 )]
margin_left = 80.0
margin_right = 100.0
margin_bottom = 30.0

[node name="Scene" parent="MarginData/VBox/HBoxTop/VBox/HBoxScene" instance=ExtResource( 12 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 104.0
margin_top = 0.0
margin_right = 484.0
margin_bottom = 30.0

[node name="Open" type="Button" parent="MarginData/VBox/HBoxTop/VBox/HBoxScene"]
margin_left = 488.0
margin_right = 510.0
margin_bottom = 30.0
rect_min_size = Vector2( 20, 20 )
hint_tooltip = "Open scene"
icon = ExtResource( 10 )

[node name="HBoxDescription" type="HBoxContainer" parent="MarginData/VBox/HBoxTop/VBox"]
margin_top = 96.0
margin_right = 510.0
margin_bottom = 216.0
rect_min_size = Vector2( 0, 5 )

[node name="Label" type="Label" parent="MarginData/VBox/HBoxTop/VBox/HBoxDescription"]
margin_right = 100.0
margin_bottom = 120.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 5
text = "Description"

[node name="Description" type="TextEdit" parent="MarginData/VBox/HBoxTop/VBox/HBoxDescription"]
margin_left = 104.0
margin_right = 305.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 120 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )

[node name="Dropdown" parent="MarginData/VBox/HBoxTop/VBox/HBoxDescription" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 309.0
margin_right = 510.0
margin_bottom = 120.0

[node name="VBoxPreview" type="VBoxContainer" parent="MarginData/VBox/HBoxTop"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 216.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginData/VBox/HBoxTop/VBoxPreview"]
margin_right = 510.0
margin_bottom = 14.0
text = "Icon"
align = 1

[node name="Texture" type="TextureRect" parent="MarginData/VBox/HBoxTop/VBoxPreview"]
margin_top = 18.0
margin_right = 510.0
margin_bottom = 216.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
stretch_mode = 6

[node name="HBoxItem" type="HBoxContainer" parent="MarginData/VBox"]
margin_top = 220.0
margin_right = 1024.0
margin_bottom = 244.0

[node name="Label" type="Label" parent="MarginData/VBox/HBoxItem"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "Item to craft"

[node name="Texture" type="TextureRect" parent="MarginData/VBox/HBoxItem"]
margin_left = 104.0
margin_right = 128.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
texture = ExtResource( 8 )
stretch_mode = 4

[node name="Item" parent="MarginData/VBox/HBoxItem" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 132.0
margin_right = 1024.0
margin_bottom = 24.0

[node name="HBoxAdd" type="HBoxContainer" parent="MarginData/VBox"]
margin_top = 248.0
margin_right = 1024.0
margin_bottom = 268.0

[node name="Add" type="Button" parent="MarginData/VBox/HBoxAdd"]
margin_right = 22.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
hint_tooltip = "Add ingredient"
icon = ExtResource( 5 )

[node name="Label" type="Label" parent="MarginData/VBox/HBoxAdd"]
margin_left = 26.0
margin_top = 3.0
margin_right = 99.0
margin_bottom = 17.0
text = "Ingredients"

[node name="VBoxIngredients" type="VBoxContainer" parent="MarginData/VBox"]
margin_top = 272.0
margin_right = 1024.0
margin_bottom = 296.0

[node name="HBoxIngredients" parent="MarginData/VBox/VBoxIngredients" instance=ExtResource( 6 )]
margin_top = 0.0
margin_bottom = 24.0
